...
    
  let dataModel = DataModel()
  
  override func viewDidLoad() {
    super.viewDidLoad()
    
    tableView.accessibilityIdentifier = "Workouts Table"
    
  }
  
  override func viewWillAppear(animated: Bool) {
    super.viewWillAppear(animated)
    
...
